syntax = "proto3";

package user;

option go_package = "ecommerce/user-service/internal/pb;pb";

service UserService {
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}
